вторая локаль, добавление даты, сортировка

--- a/modules/core/src/ru/iovchinnikov/talks/app.properties
+++ b/modules/core/src/ru/iovchinnikov/talks/app.properties
@@ -23,5 +23,5 @@ cuba.anonymousSessionId = 8d4fdff3-dc7d-479b-1be3-2dd468958b9f
 ###############################################################################
 
 cuba.webContextName = app-core
-cuba.availableLocales = English|en
+cuba.availableLocales = English|en;Russian|ru
 cuba.localeSelectVisible = false
