--- a/modules/core/src/ru/iovchinnikov/talks/app.properties
+++ b/modules/core/src/ru/iovchinnikov/talks/app.properties
@@ -22,6 +22,8 @@ cuba.anonymousSessionId = 8d4fdff3-dc7d-479b-1be3-2dd468958b9f
 #                                  Other                                      #
 ###############################################################################
 
-cuba.webContextName = app-core
+cuba.webContextName = talks-core
 cuba.availableLocales = English|en;Russian|ru
 cuba.localeSelectVisible = false
+cuba.restApiUrl = http://localhost:8080/talks-portal/api
+cuba.webAppUrl = http://localhost:8080/talks
