--- a/modules/web/src/ru/iovchinnikov/talks/web-app.properties
+++ b/modules/web/src/ru/iovchinnikov/talks/web-app.properties
@@ -29,11 +29,13 @@ cuba.creditsConfig = +
 ###############################################################################
 
 # Middleware connection
-cuba.connectionUrlList = http://localhost:8080/app-core
+cuba.connectionUrlList = http://localhost:8080/talks-core
 
 # Set to false if the middleware works on different JVM
 cuba.useLocalServiceInvocation = true
 
-cuba.webContextName = app
+cuba.webContextName = talks
 cuba.availableLocales = English|en;Russian|ru
 cuba.localeSelectVisible = false
+cuba.restApiUrl = http://localhost:8080/talks-portal/api
+cuba.webAppUrl = http://localhost:8080/talks
