--- a/modules/web/src/ru/iovchinnikov/talks/web-app.properties
+++ b/modules/web/src/ru/iovchinnikov/talks/web-app.properties
@@ -39,3 +39,5 @@ cuba.availableLocales = English|en;Russian|ru
 cuba.localeSelectVisible = false
 cuba.restApiUrl = http://localhost:8080/talks-portal/api
 cuba.webAppUrl = http://localhost:8080/talks
+cuba.web.foldersPaneEnabled = true
+cuba.web.theme = havana
