--- a/modules/core/src/ru/iovchinnikov/talks/app.properties
+++ b/modules/core/src/ru/iovchinnikov/talks/app.properties
@@ -2,7 +2,7 @@
 #                              Configuration                                  #
 ###############################################################################
 
-cuba.dbmsType = hsql
+cuba.dbmsType = postgres
 
 cuba.springContextConfig = +ru/iovchinnikov/talks/spring.xml
 
