--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,6 @@
 rootProject.name = 'discuss'
-def modulePrefix = 'talks'
-include(":${modulePrefix}-global", ":${modulePrefix}-core", ":${modulePrefix}-gui", ":${modulePrefix}-web")
-project(":${modulePrefix}-global").projectDir = new File(settingsDir, 'modules/global')
-project(":${modulePrefix}-core").projectDir = new File(settingsDir, 'modules/core')
-project(":${modulePrefix}-gui").projectDir = new File(settingsDir, 'modules/gui')
-project(":${modulePrefix}-web").projectDir = new File(settingsDir, 'modules/web')
+include(':talks-global', ':talks-core', ':talks-gui', ':talks-web')
+project(':talks-global').projectDir = new File(settingsDir, 'modules/global')
+project(':talks-core').projectDir = new File(settingsDir, 'modules/core')
+project(':talks-gui').projectDir = new File(settingsDir, 'modules/gui')
+project(':talks-web').projectDir = new File(settingsDir, 'modules/web')
