--- a/build.gradle
+++ b/build.gradle
@@ -213,3 +213,8 @@ task wrapper(type: Wrapper) {
 }
 
 apply from: 'extra.gradle'
+
+task buildWar(type: CubaWarBuilding) {
+    appHome = '${app.home}'
+    singleWar = false
+}
