Отказ от дополнительных полей в пользу системных свойств сущностей

--- a/modules/web/src/ru/iovchinnikov/talks/web-app.properties
+++ b/modules/web/src/ru/iovchinnikov/talks/web-app.properties
@@ -40,4 +40,4 @@ cuba.localeSelectVisible = false
 cuba.restApiUrl = http://localhost:8080/talks-portal/api
 cuba.webAppUrl = http://localhost:8080/talks
 cuba.web.foldersPaneEnabled = true
-cuba.web.theme = havana
+cuba.web.theme = halo
